# zk-trie

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: fmt.yml
benches/: bench.rs
scripts/: regenerate_test_data.rs
src/: accessed_nodes_tracker.rs  error.rs  lib.rs  node_codec.rs  node_header.rs  proof_size_extension.rs  recorder.rs  recorder_ext.rs  storage_proof.rs  trie_codec.rs  trie_stream.rs
src/cache/: mod.rs  shared_cache.rs
test-res/: invalid-delta-order  proof  storage_root  valid-delta-order
