[package]
name = "sp-trie"
version = "38.0.0"
authors = ["Parity Technologies <admin@parity.io>", "Quantus Labs <info@quantus.com>"]
description = "Patricia trie stuff using a parity-scale-codec node format"
repository = "https://github.com/Quantus-Network/zk-trie.git"
license = "Apache-2.0"
edition = "2021"
homepage = "https://paritytech.github.io/polkadot-sdk/"
documentation = "https://docs.rs/sp-trie"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
name = "bench"
harness = false

[dependencies]
ahash = { version = "0.8.2", optional = true }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
hash-db = { version = "0.16.0", default-features = false }
memory-db = { version = "0.32.0", default-features = false }
nohash-hasher = { version = "0.2.0", optional = true }
parking_lot = { version = "0.12.1", default-features = true, optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
scale-info = { version = "2.11.1", features = ["derive"], default-features = false }
thiserror = { version = "1.0.64", optional = true }
tracing = { version = "0.1.37", default-features = true, optional = true }
trie-db = { version = "0.29.1", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-externalities = { version = "0.30.0", default-features = false }
schnellru = { version = "0.2.3", optional = true }

[patch.crates-io]
sp-trie = { path = "." }

[dev-dependencies]
array-bytes = { version = "6.2.2", default-features = true }
criterion = { version = "0.5.1", default-features = true }
trie-bench = { version = "0.39.0" }
trie-standardmap = { version = "0.16.0" }
sp-runtime = { version = "40.1.0", default-features = true }

[features]
default = ["std"]
std = [
	"ahash",
	"codec/std",
	"hash-db/std",
	"memory-db/std",
	"nohash-hasher",
	"parking_lot",
	"rand",
	"scale-info/std",
	"schnellru",
	"sp-core/std",
	"sp-externalities/std",
	"thiserror",
	"tracing",
	"trie-db/std",
	"trie-root/std",
]
